--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.0.0
   http: ^1.3.0
+  http_parser: ^4.1.2
   image_picker: ^1.1.2
   shared_preferences: ^2.5.2
   timeago: ^3.7.0
