--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ^3.6.2
 
 dependencies:
+  chewie: ^1.10.0
   equatable: ^2.0.7
   flutter:
     sdk: flutter
@@ -17,6 +18,7 @@ dependencies:
   shared_preferences: ^2.5.2
   timeago: ^3.7.0
   url_launcher: ^6.3.1
+  video_player: ^2.9.2
   youtube_player_flutter: ^9.1.1
 
 dev_dependencies:
